<?xml version="1.0"?>
<package>
  <name>detector</name>
  <version>0.0.1</version>
  <description>This package provides detector with possibility of running using tensorrt.</description>

  <maintainer email="alexey.nekrasov@rwth-aachen.de"></maintainer>

  <license>whatever</license>

  <author email="alexey.nekrasov@rwth-aachen.de"></author>

  <license>whatever</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>darknet_ros_msgs</run_depend>

</package>
